--- a/pages/ask/block-btn/index.wxml
+++ b/pages/ask/block-btn/index.wxml
@@ -1,3 +1,8 @@
 <view class="button-example">
-  <t-button theme="primary" size="large" block bindtap="onTap">提问</t-button>
+    <t-button wx:if="{{ !loading }}" theme="primary" size="large" block bindtap="onTap">
+            <text class="button-text">提问</text>
+    </t-button>
+    <t-button wx:else theme="primary" size="large" block bindtap="onTap" disabled>
+            <t-loading theme="spinner" size="40rpx" class="button-loading" />
+    </t-button>
 </view>
