--- a/pages/ask/autosize/index.wxml
+++ b/pages/ask/autosize/index.wxml
@@ -1,1 +1,1 @@
-<t-textarea label="ChatGPT回答" placeholder="ChatGPT回答结果将显示在这..." disableDefaultPadding="{{true}}" value="{{answer}}" autosize />
+<t-textarea label="回答" placeholder="回答将显示在这..." disableDefaultPadding="{{true}}" value="{{answer}}" autosize />
