--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,8 +1,8 @@
 <view class="main">
   <view class="title-wrap">
-    <image class="title-icon" mode="aspectFit" src="/assets/TDesignLogo@2x.png" aria-label="TDesign Logo" />
+    <image class="title-icon" mode="aspectFit" src="/assets/logo.png" aria-label="TDesign Logo" />
   </view>
-  <view class="desc"> TDesign 适配微信小程序的组件库 </view>
+  <view class="desc"> 众多功能敬请期待 </view>
   <pull-down-list
     wx:for="{{list}}"
     name="{{item.name}}"
