--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -3,6 +3,7 @@
     <image class="title-icon" mode="aspectFit" src="/assets/logo.png" aria-label="TDesign Logo" />
   </view>
   <view class="desc"> 众多功能敬请期待 </view>
+  <view class="desc"> {{ versionInfo }} </view>
   <pull-down-list
     wx:for="{{list}}"
     name="{{item.name}}"
