feat(tab-bar): slide up and down to hide or show

--- a/pages/ask/ask.wxml
+++ b/pages/ask/ask.wxml
@@ -1,5 +1,5 @@
 <!--pages/ask/ask.wxml-->
-<view>
+<view bindtouchstart="handletouchstart" bindtouchmove="handletouchmove">
     <t-demo>
         <card />
     </t-demo>
