--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -1,32 +1,48 @@
 page {
-  background-color: #f6f6f6;
+    background-color: #f6f6f6;
 }
+
 .main {
-  width: 100%;
-  box-sizing: border-box;
-  padding-left: 32rpx;
-  padding-right: 32rpx;
-  padding-top: 48rpx;
-  padding-bottom: 240rpx;
+    width: 100%;
+    box-sizing: border-box;
+    padding-left: 32rpx;
+    padding-right: 32rpx;
+    padding-top: 48rpx;
+    padding-bottom: 240rpx;
 }
-.title-wrap {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  padding-left: 16rpx;
-  padding-right: 16rpx;
-}
-.title-icon {
-  width: 296rpx;
-  height: 296rpx;
-}
+
 .desc {
-  color: rgba(0, 0, 0, 0.4);
-  margin-top: 32rpx;
-  font-size: 28rpx;
-  font-weight: 400;
-  line-height: 44rpx;
-  margin-bottom: 48rpx;
-  padding-left: 16rpx;
-  padding-right: 16rpx;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: rgba(0, 0, 0, 0.4);
+    margin-top: 32rpx;
+    font-size: 28rpx;
+    font-weight: 400;
+    line-height: 44rpx;
+    margin-bottom: 48rpx;
+    padding-left: 16rpx;
+    padding-right: 16rpx;
+}
+
+.title-wrap {
+    padding-left: 16rpx;
+    padding-right: 16rpx;
+}
+
+.title-icon {
+    position: relative;
+    left: 0;
+    height: 296rpx;
+    width: 296rpx;
+}
+
+.logo-transition {
+    transition: all 0.5s;
+}
+
+.logo-moved {
+    left: 100%;
+    transform: translateX(-296rpx) rotateY(180deg);
 }
