--- a/pages/ask/ask.wxml
+++ b/pages/ask/ask.wxml
@@ -1,12 +1,12 @@
 <!--pages/ask/ask.wxml-->
-<view style="height: 100vh;">
-    <view style="height: 70%;" class="result-container">
-        <result wx:for="{{messages}}" wx:for-item="msg"  role="{{msg.role}}" content="{{msg.content}}"
+<view class="page-container">
+    <view class="result-container">
+        <result hidden="{{messages === '[]'}}" wx:for="{{messages}}" wx:for-item="msg"  role="{{msg.role}}" content="{{msg.content}}"
         wx:key="index"
          class="result-item" />
     </view>
-    <view style="height: 30%;">
-        <card />
+    <view >
+        <card class="input-container" askText="{{askText}}" />
         <btn-group bind:send="Send" bind:clear="Clear" loading="{{loading}}" />
     </view>
 </view>
