--- a/pages/ask/card/index.wxml
+++ b/pages/ask/card/index.wxml
@@ -1,11 +1,11 @@
 <view class="textarea-example">
   <t-textarea
-    t-class="external-class"
     placeholder="请在这输入文字"
     maxlength="140"
+    autosize
     indicator
+    value="{{askText}}"
     disableDefaultPadding="{{true}}"
     bindchange="onChange"
-    style="{{style}}"
   />
 </view>
