--- a/pages/ask/result/index.wxml
+++ b/pages/ask/result/index.wxml
@@ -1,4 +1,4 @@
 <view class="result-item">
-    <textarea value="{{content}}" auto-height disable-default-padding disabled>
+    <textarea class="{{role}}" value="{{content}}" auto-height disable-default-padding disabled>
     </textarea>
 </view>
