--- a/pages/ask/ask.wxml
+++ b/pages/ask/ask.wxml
@@ -9,4 +9,7 @@
         <card class="input-container" askText="{{askText}}" />
         <btn-group bind:send="Send" bind:clear="Clear" loading="{{loading}}" />
     </view>
+    <view class="more-container" bindtap="handleMore">
+        更多
+    </view>
 </view>
