--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -17,13 +17,12 @@ page {
     justify-content: center;
     align-items: center;
     color: rgba(0, 0, 0, 0.4);
-    margin-top: 32rpx;
+    margin-block: 48rpx;
     font-size: 28rpx;
     font-weight: 400;
     line-height: 44rpx;
-    margin-bottom: 48rpx;
-    padding-left: 16rpx;
-    padding-right: 16rpx;
+    padding-inline: 16rpx;
+    gap: 32rpx;
 }
 
 .title-wrap {
