--- a/pages/ask/result/index.wxss
+++ b/pages/ask/result/index.wxss
@@ -1,7 +1,6 @@
 .result-item {
     max-width: 100%;
-    margin-inline: 32rpx;
-    margin-block-start: 12rpx;
+    margin: 12rpx 32rpx 0 32rpx;
     padding: 20rpx;
     background-color: white;
     border-radius: 10rpx;
