--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -3,6 +3,10 @@ page {
 }
 
 .main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     box-sizing: border-box;
     padding-left: 32rpx;
@@ -17,31 +21,30 @@ page {
     justify-content: center;
     align-items: center;
     color: rgba(0, 0, 0, 0.4);
-    margin-block: 48rpx;
+    margin: 48rpx 0 0 0;
     font-size: 28rpx;
     font-weight: 400;
     line-height: 44rpx;
-    padding-inline: 16rpx;
+    padding: 0 16rpx 0 16rpx;
     gap: 32rpx;
 }
 
-.title-wrap {
-    padding-left: 16rpx;
-    padding-right: 16rpx;
+.logo-container {
+    border-radius: 100%;
+    background: rgb(97,229,37);
+background: radial-gradient(circle, rgba(97,229,37,1) 7%, rgba(121,68,9,0.19233630952380953) 30%, rgba(255,255,255,1) 80%);
 }
 
-.title-icon {
-    position: relative;
-    left: 0;
+.logo {
     height: 296rpx;
     width: 296rpx;
+
 }
 
 .logo-transition {
-    transition: all 0.5s;
+    transition: all 0.5s ease-in-out;
 }
 
 .logo-moved {
-    left: 100%;
-    transform: translateX(-296rpx) rotateY(180deg);
+    transform: rotateY(180deg);
 }
