--- a/pages/list/list.wxss
+++ b/pages/list/list.wxss
@@ -1,36 +1,31 @@
 page {
     background-color: #fff;
-  }
-  
-  page .round-image {
+}
+
+page .round-image {
     border-radius: 12rpx;
-  }
-  
-  .side-bar-wrapper {
+}
+
+.side-bar-wrapper {
     display: flex;
     height: 100vh;
-    overflow: hidden;
-  }
-  
-  .side-bar-wrapper .content {
+}
+
+.side-bar-wrapper .content {
     flex: 1;
-    transition: transform 0.3s ease;
-  }
-  
-  .side-bar-wrapper .section {
+}
+
+.side-bar-wrapper .section {
     padding: 32rpx 0;
-    box-sizing: border-box;
-    height: 100%;
-  }
-  
-  .side-bar-wrapper .title {
+}
+
+.side-bar-wrapper .title {
     padding-left: 40rpx;
     margin-bottom: 8rpx;
-  }
-  
-  .side-bar-wrapper .image {
+    line-height: 52rpx;
+}
+
+/* .t-grid-item {
     width: 96rpx;
     height: 96rpx;
-    border: 2rpx solid #e7e7e7;
-  }
-  
+} */
