--- a/pages/ask/btn-group/index.wxml
+++ b/pages/ask/btn-group/index.wxml
@@ -1,5 +1,5 @@
 <view class="button-group">
-    <t-button wx:if="{{ !loading }}" theme="primary" size="large" class="send-button" bindtap="handleSend">
+    <t-button wx:if="{{ !loading }}" theme="primary" size="large" class="send-button" bindtap="handleSend" aria-label="发送">
             <text class="button-text">发送</text>
     </t-button>
     <t-button wx:else theme="primary" size="large" class="send-button" bindtap="handleSend" disabled>
