--- a/components/card/index.wxml
+++ b/components/card/index.wxml
@@ -4,7 +4,7 @@
     maxlength="{{maxLength}}"
     autosize
     indicator
-    value="{{askText}}"
+    model:value="{{content}}"
     disableDefaultPadding="{{true}}"
     bindchange="onChange"
   />
