feat(icon): change navbar icon

--- a/components/result/index.wxml
+++ b/components/result/index.wxml
@@ -3,6 +3,7 @@
      value="{{content}}"
      maxlength="-1"
      auto-height
+     bindtap="handleTextTap"
      disabled>
     </textarea>
 </view>
