--- a/components/card/index.wxml
+++ b/components/card/index.wxml
@@ -1,6 +1,6 @@
 <view class="textarea-example">
   <t-textarea
-    placeholder="请在这输入文字"
+    placeholder="输入一些内容..."
     maxlength="{{maxLength}}"
     autosize
     indicator
