--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -35,12 +35,9 @@ page {
     justify-content: center;
     align-items: center;
     color: rgba(0, 0, 0, 0.4);
-    margin: 48rpx 0 0 0;
     font-size: 28rpx;
     font-weight: 400;
     line-height: 44rpx;
-    padding: 0 16rpx 0 16rpx;
-    gap: 32rpx;
 }
 
 .logo-container {
@@ -64,4 +61,11 @@ background: radial-gradient(circle, rgba(42,229,37,1) 0%, rgba(42,229,37,0.44443
 
 .logo-moved {
     transform: rotateY(180deg);
+}
+
+.link {
+    display: flex;
+    flex-direction: row;
+    gap: 20rpx;
+    margin-top: 32rpx;
 }
