fix(ask): send and clear buttons are covered by the tab bar when there are too many messages

--- a/pages/ask/ask.wxss
+++ b/pages/ask/ask.wxss
@@ -3,10 +3,14 @@ Page {
     --td-navbar-color: #fff;
     --td-navbar-bg-color: #f6f6f6;
 }
+
 .page-container {
     display: flex;
     flex-direction: column;
     max-height: 100vh;
+}
+
+.input-group{
     margin-bottom: 110rpx;
 }
 
