--- a/pages/ask/ask.wxml
+++ b/pages/ask/ask.wxml
@@ -5,11 +5,8 @@
         <result  wx:for="{{messages}}" wx:for-item="msg"  role="{{msg.role}}" content="{{msg.content}}"
         wx:key="index"/>
     </view>
-    <view >
+    <view class="input-group">
         <card class="input-container" model:content="{{askText}}" maxLength="{{300}}" />
         <btn-group bind:send="Send" bind:clear="Clear" loading="{{loading}}" />
     </view>
-    <!-- <view class="more-container" bindtap="handleMore">
-        工具箱
-    </view> -->
 </view>
