--- a/pages/list/list.wxml
+++ b/pages/list/list.wxml
@@ -5,9 +5,17 @@
     <scroll-view class="content" scroll-y scroll-with-animation scroll-top="{{scrollTop}}" bind:scroll="onScroll">
         <view wx:for="{{categories}}" wx:key="index" class="section">
             <view class="title">{{item.title || item.label}}</view>
-            <t-grid column="{{2}}" border="{{border}}" >
+            <t-grid column="{{1}}" border="{{border}}">
                 <block wx:for="{{item.items}}" wx:key="index" wx:for-item="cargo">
-                    <t-grid-item text="{{cargo.label}}" hover url="/pages/tool/tool?id={{cargo.id}}">
+                    <t-grid-item url="/pages/tool/tool?id={{cargo.id}}">
+                        <view class="tool">
+                            <view class="name">
+                                {{ cargo.label }}
+                            </view>
+                            <view class="description">
+                                {{ cargo.description }}
+                            </view>
+                        </view>
                     </t-grid-item>
                 </block>
             </t-grid>
