feat: support websocket

--- a/components/result/index.wxml
+++ b/components/result/index.wxml
@@ -1,9 +1,9 @@
-<view class="result-item" >
-    <textarea class="text {{role}}"
-     value="{{content}}"
-     maxlength="-1"
-     auto-height
-     bindtap="handleTextTap"
-     disabled>
-    </textarea>
-</view>
+<scroll-view style="height: calc({{scrollViewHeight}}px - 110rpx - 142px)" scroll-y scroll-into-view="{{scrollLast}}">
+    <view class="result-item" wx:for="{{messages}}" wx:for-item="msg" wx:for-index="idx" wx:key="idx" id="msg{{idx+1}}">
+        <textarea class="text {{msg.role}}" value="{{msg.content}}" maxlength="-1" auto-height bindtap="handleTextTap" disabled/>
+    </view>
+    <view class="result-item" hidden="{{!onStream}}" id="msg{{messages.length + 1}}">
+        <textarea class="text assistant" value="{{content}}" maxlength="-1" auto-height bindtap="handleTextTap" disabled/>
+    </view>
+    <view id="msg{{messages.length + 2}}" style="height: 1px"/>
+</scroll-view>
