--- a/pages/tool/tool.wxml
+++ b/pages/tool/tool.wxml
@@ -11,9 +11,11 @@
     <text class="title">{{title}}</text>
     <text class="description">{{description}} </text>
     <card model:content="{{askText}}" maxLength="{{-1}}" />
-    <t-button bind:send="handleSend" text="发送" loading="{{loading}}"></t-button>
+    <t-button bind:send="handleWsSend" text="发送" loading="{{loading}}"></t-button>
     <block wx:if="{{showContent}}">
-        <result content="{{content}}" />
+        <view class="result-item">
+        <textarea value="{{content}}" maxlength="-1" auto-height disabled/>
+        </view>
         <t-button bind:copy="handleCopy" text="复制" loading="{{loading}}"></t-button>
     </block>
 </view>
