--- a/components/result/index.wxml
+++ b/components/result/index.wxml
@@ -1,4 +1,4 @@
-<scroll-view style="height: calc({{scrollViewHeight}}px - 110rpx - 142px)" scroll-y scroll-into-view="{{scrollLast}}">
+<scroll-view style="height: calc({{scrollViewHeight}}px - 406rpx)" scroll-y scroll-into-view="{{scrollLast}}">
     <view class="result-item" wx:for="{{messages}}" wx:for-item="msg" wx:for-index="idx" wx:key="idx" id="msg{{idx+1}}">
         <textarea class="text {{msg.role}}" value="{{msg.content}}" maxlength="-1" auto-height bindtap="handleTextTap" disabled/>
     </view>
