--- a/pages/tool/tool.wxss
+++ b/pages/tool/tool.wxss
@@ -1,13 +1,17 @@
 /* pages/tool/tool.wxss */
 Page {
-    --td-navbar-color: #fff;
-    --td-navbar-bg-color: #f6f6f6;
 }
 
 .tool-container {
     display: flex;
     flex-direction: column;
     padding-bottom: 40rpx;
+}
+
+.text {
+    min-width: 100%;
+    font-size: var(--messages-font-size);
+    line-height: var(--messages-font-size);
 }
 
 .title {
