--- a/pages/ask/ask.wxss
+++ b/pages/ask/ask.wxss
@@ -9,3 +9,20 @@ Page {
     flex-direction: column;
     max-height: 100vh;
 }
+
+.result-item {
+    max-width: 100%;
+    height: 120rpx;
+    max-height: 120rpx;
+    margin: 12rpx 32rpx 0 32rpx;
+    padding: 20rpx;
+    background-color: white;
+    border-radius: 10rpx;
+}
+
+.input {
+    min-width: 100%;
+    max-height: 120rpx;
+    font-size: var(--messages-font-size);
+    line-height: var(--messages-font-size);
+}
