--- a/custom-tab-bar/index.wxml
+++ b/custom-tab-bar/index.wxml
@@ -1,5 +1,11 @@
-<t-tab-bar value="{{selectedValue}}" bindchange="onChange" theme="tag" split="{{false}}">
+<t-tab-bar wx:if="{{largeFontMode}}" value="{{selectedValue}}" bindchange="onChange" theme="tag" split="{{false}}">
   <t-tab-bar-item style="font-size: 1rem;" wx:for="{{list}}" wx:key="index" value="{{item.value}}" >
+    {{item.label}}
+  </t-tab-bar-item>
+</t-tab-bar>
+
+<t-tab-bar wx:else value="{{selectedValue}}" bindchange="onChange" theme="tag" split="{{false}}">
+  <t-tab-bar-item style="font-size: 1rem;" wx:for="{{list}}" wx:key="index" icon="{{item.icon}}" value="{{item.value}}" >
     {{item.label}}
   </t-tab-bar-item>
 </t-tab-bar>
