fix: textarea length limit
The default length limit for textarea is 140, which results in only being able to paste a portion of
the input.

--- a/pages/tool/tool.wxml
+++ b/pages/tool/tool.wxml
@@ -6,7 +6,7 @@
     <text class="title title-font-size">{{title}}</text>
     <text class="description sub-title-font-size">{{description}} </text>
     <view class="result-item">
-        <textarea bindfocus="handleFocus" bindinput="handleInput" bindblur="handleBlur" model:value="{{askText}}" auto-height />
+        <textarea maxlength="{{-1}}" bindfocus="handleFocus" bindinput="handleInput" bindblur="handleBlur" model:value="{{askText}}" auto-height />
         <text class="input-placeholder" hidden="{{!showTextareaPlaceholder}}">请输入一些内容...</text>
     </view>
     <button-group bind:stop="handleStop" bind:paste="handlePaste" bind:send="handleWsSend" loading="{{loading}}" />
